# kate-KDEmacs

./: CMakeLists.txt  KDEmacs.kdev4  README.md  kdemacsplugin.cpp  kdemacsplugin.h  kdemacsui.rc  kdemacsview.h  ktexteditor_kdemacs.desktop
